--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "yuri2web",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "web server",
-  "main": "index.js",
+  "main": "web.js",
   "scripts": {
     "test": "make test"
   },
@@ -16,13 +16,17 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "yuri2js": "^1.2.1"
+  },
   "keywords": [
     "nodejs",
     "yuri2",
     "web",
     "app",
-    "http"
+    "http",
+    "process",
+    "panel"
   ],
   "author": {
     "name": "yuri2",
